# financial-analysis-svc

./: README.md  pyproject.toml
.github/: CODEOWNERS
app/: main.py
notebooks/: 01_getting_started.ipynb  02_plotting.ipynb  03_returns.ipynb  04_volatility.ipynb  05_moving_averages.ipynb  06_value_at_risk.ipynb  07_forecasting_arima.ipynb
notebooks/data/: goog.feather  msft.feather
