[project]
name = "financial-analysis-svc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "matplotlib>=3.11.0",
    "mplfinance>=0.12.10b0",
    "nbformat>=5.10.4",
    "numba>=0.65.1",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "statsmodels>=0.14.6",
    "uvicorn[standard]>=0.32.0",
    "yfinance>=1.4.1",
]
